--- a/frontend/src/components/Pun/Pun.scss
+++ b/frontend/src/components/Pun/Pun.scss
@@ -4,14 +4,16 @@
     align-items: center;
     gap: 1rem;
     position: relative;
-    top: -7rem;
-    width: 550px;
+    top: -9rem;
+    width: 34.375rem;
+    min-height: 12.5rem;
+    max-height: 12.5rem;
     &__text{
         max-width: 60%;
         height: fit-content;
     }
     &__gif{
-        max-height: 200px;
-        max-width: 200px;
+        max-height: 12.5rem;
+        max-width: 12.5rem;
     }
 }
