--- a/frontend/src/styles/partials/_globals.scss
+++ b/frontend/src/styles/partials/_globals.scss
@@ -2,7 +2,7 @@
 @use './typography.scss' as *;
 
 body {
-    margin: 0;
+    margin: 0 4rem;
     background-color: $PRIMARY-BACKGROUND;
     color: $PRIMARY-TEXT;
     font-family: 'Nunito';
