added styling for recent boxes

--- a/frontend/src/styles/partials/_variables.scss
+++ b/frontend/src/styles/partials/_variables.scss
@@ -1,5 +1,6 @@
 $PRIMARY-BACKGROUND: #ffe9c4;
 $PRIMARY-TEXT: #2F4F4F;
-$BUTTON: #EED1FC;
-$BUTTON-HOVER: #e0adfa;
+$BUTTON: #F1B2D6;
+$BUTTON-HOVER: #D78DAE;
 $OUTLINE: #22c1ca;
+$RECENT-BOX: #E6E6FA;
