--- a/frontend/src/components/Box/Box.scss
+++ b/frontend/src/components/Box/Box.scss
@@ -1,3 +1,12 @@
+@use '../../styles/partials/variables.scss' as *;
+
 .box{
     text-align: center;
+    background-color: $RECENT-BOX;
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid $PRIMARY-TEXT;
+    border-radius: 20px;
+    box-sizing: border-box;
+    margin: 0;
 }
