--- a/frontend/src/components/PunGenerator/PunGenerator.scss
+++ b/frontend/src/components/PunGenerator/PunGenerator.scss
@@ -38,7 +38,7 @@
         position: absolute;
         z-index: 99;
         top: -10.85rem;
-        right: .25rem;
+        right: 0.2rem;
         font-size: 16px;
         padding: 0.75rem;
         border-radius: 3.125rem;
