--- a/frontend/src/components/RecentSearches/RecentSearches.scss
+++ b/frontend/src/components/RecentSearches/RecentSearches.scss
@@ -1,7 +1,5 @@
+@use '../../styles/partials/mixins.scss' as *;
+
 .recent-searches{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 12.5rem;
-    max-width: 12.5rem;
+    @include recent-bar;
 }
